# OESPNTYM

./: .gitignore  Cargo.toml  Makefile  README.md  example.xml
alice/: Dockerfile  Dockerfile-1  Dockerfile-3  Makefile
alice/data/: torrc
fenics/: Makefile
jupyter/: Makefile
kalina/: Dockerfile  Makefile
nextcloud/: Makefile
src/: errors.rs  main.rs
vscode/: Dockerfile  Makefile  dockerfile
