[package]
name = "oespntym"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6"
tempfile = "3.3"
log = "0.4"
pretty_env_logger = "0.4"
thiserror = "1.0"
m3u8-rs = "4.0"
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1.0"